add hero section

--- a/Responsive_wesbite/index.html
+++ b/Responsive_wesbite/index.html
@@ -29,7 +29,19 @@
 
     </header>
     <main>
-
+        <!--Hero Start-->
+        <section class="hero">
+            <section class="hero-info">
+                <h1>Comida Casera, <span class="hero-info-block">saluable y </span> <span class="vegana">vegana</span>.</h1>
+                <section id="hero-buttons">
+                    <button>Ver Menu</button>
+                    <button>Local Cerca</button>
+                </section>
+                <img src="img/heroIcons.png" alt="icons">
+            </section>
+            <img id="hero-image" src="img/koreanDish.png" alt="food image"> 
+        </section>
+        <!--Hero end-->
 
     </main>
     <footer></footer>
