add speciality section

--- a/Responsive_wesbite/index.html
+++ b/Responsive_wesbite/index.html
@@ -43,6 +43,42 @@
         </section>
         <!--Hero end-->
 
+        <!--Specialities Style Start-->
+        <section class="specialities">
+            <h2 class="section-title">Especialades <span>de la casa</span></h2>
+            <article class="speciality-item">
+                <section class="speciality-info">
+                    <h3 class="speciality-category">Postres</h3>
+
+                    <p class="speciality-description">
+                        <span class="speciality-title">Yogurt Griego con Semillas y Frescas</span>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus obcaecati quae aspernatur quasi necessitatibus consequuntur a, vel, aliquam provident hic culpa, et sapiente aut nisi. Iusto aliquam fuga repudiandae rerum.
+                    </p>
+                    <section class="price">
+                        <span>$150</span>
+                        <button class="btn">Encargar</button>
+                    </section>
+                </section>
+                <img src="img/granola.png" alt="picture of granola" class="speciality-image">
+            </article>
+            <article class="speciality-item">
+                <section class="speciality-info">
+                    <h3 class="speciality-category">Almuerzo</h3>
+
+                    <p class="speciality-description">
+                        <span class="speciality-title">Sopa de Mani con garbanzo</span>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus obcaecati quae aspernatur quasi necessitatibus consequuntur a, vel, aliquam provident hic culpa, et sapiente aut nisi. Iusto aliquam fuga repudiandae rerum.
+                    </p>
+                    <section class="price">
+                        <span>$150</span>
+                        <button class="btn">Encargar</button>
+                    </section>
+                </section>
+                <img src="img/vegan.png" alt="picture of granola" class="speciality-image">
+            </article>
+        </section>
+        <!--Specialities Style End-->
+
     </main>
     <footer></footer>
     
