add Menu section

--- a/Responsive_wesbite/index.html
+++ b/Responsive_wesbite/index.html
@@ -77,7 +77,93 @@
                 <img src="img/vegan.png" alt="picture of granola" class="speciality-image">
             </article>
         </section>
-        <!--Specialities Style End-->
+        <!--Specialities  End-->
+
+        <!--Menu  Start-->
+        <section class="menu">
+            <h2 class="section-title">Menu<span>Veganismo</span></h2>
+            <section class="menu-container">
+                <section>
+                    <h3 class="menu-title">Desayuno</h3>
+                    <article class="menu-item">
+                        <img src="img/cappuccino.png" alt="cappuccino"/>
+                        <section>
+                            <h3>Cafe con leche<span>$150</span></h3>
+                            <p>3 criollitos, Mermelada</p>
+                        </section>
+                    </article>
+                    <article class="menu-item">
+                        <img src="img/cappuccino.png" alt="cappuccino"/>
+                        <section>
+                            <h3>Cafe con leche<span>$150</span></h3>
+                            <p>3 criollitos, Mermelada</p>
+                        </section>
+                    </article>
+                    <article class="menu-item">
+                        <img src="img/cappuccino.png" alt="cappuccino"/>
+                        <section>
+                            <h3>Cafe con leche<span>$150</span></h3>
+                            <p>3 criollitos, Mermelada</p>
+                        </section>
+                    </article>
+                </section>
+                <section>
+                    <h3 class="menu-title">Almuerzo</h3>
+                    <article class="menu-item">
+                        <img src="img/cappuccino.png" alt="cappuccino"/>
+                        <section>
+                            <h3>Cafe con leche<span>$150</span></h3>
+                            <p>3 criollitos, Mermelada</p>
+                        </section>
+                    </article>
+                    <article class="menu-item">
+                        <img src="img/cappuccino.png" alt="cappuccino"/>
+                        <section>
+                            <h3>Cafe con leche<span>$150</span></h3>
+                            <p>3 criollitos, Mermelada</p>
+                        </section>
+                    </article>
+                    <article class="menu-item">
+                        <img src="img/cappuccino.png" alt="cappuccino"/>
+                        <section>
+                            <h3>Cafe con leche<span>$150</span></h3>
+                            <p>3 criollitos, Mermelada</p>
+                        </section>
+                    </article>
+                </section>
+                <section>
+                    <h3 class="menu-title">Meriendo</h3>
+                    <article class="menu-item">
+                        <img src="img/cappuccino.png" alt="cappuccino"/>
+                        <section>
+                            <h3>Cafe con leche<span>$150</span></h3>
+                            <p>3 criollitos, Mermelada</p>
+                        </section>
+                    </article>
+                    <article class="menu-item">
+                        <img src="img/cappuccino.png" alt="cappuccino"/>
+                        <section>
+                            <h3>Cafe con leche<span>$150</span></h3>
+                            <p>3 criollitos, Mermelada</p>
+                        </section>
+                    </article>
+                    <article class="menu-item">
+                        <img src="img/cappuccino.png" alt="cappuccino"/>
+                        <section>
+                            <h3>Cafe con leche<span>$150</span></h3>
+                            <p>3 criollitos, Mermelada</p>
+                        </section>
+                    </article>
+                </section>
+                
+
+                
+
+            </section>
+        </section>
+
+        <!--Menu  End-->
+
 
     </main>
     <footer></footer>
