add testimony section

--- a/Responsive_wesbite/index.html
+++ b/Responsive_wesbite/index.html
@@ -155,14 +155,31 @@
                         </section>
                     </article>
                 </section>
-                
+           </section>
+        </section>
+        <!--Menu  End-->
 
-                
-
+        <!--Tesimony  Start-->
+        <section class="testimony">
+            <h2 class="section-title">Testimonio<span>Consumidor Feliz</span></h2>
+            <section class="testimony-hero">
+                <picture>
+                    <source srcset="img/testimonySmall.png" media="(max-width: 600px)"/>
+                    <source srcset="img/testimony.png"/>
+                    <img src="img/testimony.png" alt="Testimonio"/>
+                </picture>
+                <section class="testimony-text">
+                    <i class="fa-sharp fa-solid fa-quote-left"></i>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro dignissimos commodi perferendis in accusantium laborum quas maxime perspiciatis pariatur nesciunt, explicabo, molestiae eius praesentium, labore magnam dolores tempore. Repudiandae, distinctio.
+                    </p>
+                    <p>Matias Sosa</p>
+                </section>
             </section>
+
         </section>
 
-        <!--Menu  End-->
+         <!--Tesimony  End -->
 
 
     </main>
