add experts section

--- a/Responsive_wesbite/index.html
+++ b/Responsive_wesbite/index.html
@@ -178,8 +178,58 @@
             </section>
 
         </section>
-
          <!--Tesimony  End -->
+        
+        <!--Expert  Start-->
+        <section class="experts">
+            <h2 class="section-title">Expertos<span>Nuestra Cocina</span></h2>
+            <section class="experts-container">
+
+                <article class="expert">
+                    <img src="img/rodrigo.png" alt="Picture of Rodrigo" class="expert-img">
+                    <section class="expert-info">
+                        <h3>Rodrigo Russo</h3>
+                        <p>Chef</p>
+                        <section class="expert-social">
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                            <i class="fa-brands fa-twitter"></i> 
+                        </section>
+                    </section>
+                </article>
+
+                <article class="expert">
+                    <img src="img/maria.png" alt="Picture of Maria" class="expert-img">
+                    <section class="expert-info">
+                        <h3>Maria Olivos</h3>
+                        <p>Chef</p>
+                        <section class="expert-social">
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                            <i class="fa-brands fa-twitter"></i> 
+                        </section>
+                    </section>
+                </article>
+
+                <article class="expert">
+                    <img src="img/fabiano.png" alt="Picture of Fabi" class="expert-img">
+                    <section class="expert-info">
+                        <h3>fabiano Curana</h3>
+                        <p>Fundador</p>
+                        <section class="expert-social">
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                            <i class="fa-brands fa-twitter"></i> 
+                        </section>
+                    </section>
+                </article>
+
+
+            </section>
+        </section>
+
+        <!--Expert  End-->
+        
 
 
     </main>
