add form section

--- a/Responsive_wesbite/index.html
+++ b/Responsive_wesbite/index.html
@@ -224,13 +224,35 @@
                     </section>
                 </article>
 
-
             </section>
         </section>
-
         <!--Expert  End-->
-        
 
+        <!--Reservation Start-->
+        <section class="reservation">
+            <picture>
+                <source srcset="img/reservationSmall.png" media="(max-width: 600px)"/>
+                <source srcset="img/reservation.png"/>
+                <img src="img/reservation.png" alt="Reservation" class="reservation-img">
+            </picture>
+            <section class="reservation-form-section">
+                <h2 class="section-title">Te Esperamos<span>REservacion</span></h2>
+                <form action="">
+                    <input type="text" placeholder="Nombre"/>
+                    <input type="email" placeholder="Email Required"/>
+                    <input type="number" placeholder="Telefono"/>
+                    <div class="half-input">
+                        <input type="text" placeholder="Fecha" class="form-input-half">
+                        <input type="text" placeholder="Hora" class="form-input-half">
+                    </div>
+                    <input type="text" placeholder="Cantidad de Personas">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                    <input class="btn" type="submit" value="Encargar">
+                </form>
+            </section>
+        </section>
+        <!--Reservation End-->
+        
 
     </main>
     <footer></footer>
