add footer section

--- a/Responsive_wesbite/index.html
+++ b/Responsive_wesbite/index.html
@@ -252,10 +252,45 @@
             </section>
         </section>
         <!--Reservation End-->
-        
-
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer-container">
+            <section class="footer-1">
+                <p class="footer-info-p">
+                    <span class="footer-brand">Resto</span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est, harum natus. Voluptatibus perspiciatis, nam id voluptate incidunt corporis velit dolorum, esse praesentium facere consectetur illum magnam unde adipisci, autem sit.
+                </p>
+                <p>2009-2022</p>
+                <section class="footer-social">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-whatsapp"></i>
+                    <i class="fa-brands fa-facebook"></i> 
+                    <i class="fa-brands fa-twitter"></i> 
+                </section>
+            </section>
+            <section class="footer-2">
+                    <h2 class="footer-title">Hararios</h2>
+                    <ul class="footer-times">
+                        <li>Monday 9:00-21:00</li>
+                        <li>Tuesday 9:00-21:00</li>
+                        <li>Wednesday 9:00-21:00</li>
+                        <li>Thursday 9:00-21:00</li>
+                        <li>Friday 9:00-21:00</li>
+                        <li>Saturday 9:00-21:00</li>
+                        <li>Sunday 9:00-21:00</li>
+                    </ul>
+                    <h2 class="footer-title">Telefono</h2>
+                    <p>+6238323846234</p>
+            </section>
+            <section class="footer-3">
+                        <h2 class="footer-title">Direcction</h2>
+                        <p class="direction">Humberto Primo 7771</p>
+                        <p>Cordoba Capital, bv Centro</p>
+                        <img src="img/map.png" alt="map picture" class="footer-map"/>
+            </section>
+        </section>
+        <p class="copyright">2022- Disenado por Uncoder Diseno Web</p>
+
+    </footer>
     
 </body>
 </html>
