Logo background image and h1

--- a/Transparent_navbar/index.html
+++ b/Transparent_navbar/index.html
@@ -13,7 +13,9 @@
     <nav class="navbar">
             <div class="nav-container" id="navbarNav">
                 <article class="navbarnav">
+                    <span id="logo">
                     <p id="ai-logo"><a href="img/AI.png">AI Design</a></p>
+                    </span>
                     <p class="nav-item"><a href="#" class="nav-link">Home</a></p>
                     <p class="nav-item"><a href="#" class="nav-link">About</a></p>
                     <p class="nav-item"><a href="#" class="nav-link">Blog</a></p>
@@ -26,7 +28,7 @@
     <!--Banner image-->
     <div class="banner-image">
         <div class="content">
-            <h1 class="ai-header">AI Design</h1>
+            <h1 class="ai-header">Artificial <br/> Intelligence</h1>
         </div>
     </div>
 
