adding tablet functionality

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -27,9 +27,14 @@
     <!--About start-->
     <section class="about">
         <p class="section-header" id="about-header">About me</p>
-        <p class="about-text">
-            A Cambridge-based front-end developer with experience as a Cybersecurity technical support engineer. I have experience with HTML, CSS, Javascript, Python and Linux. With a passion for technology, I have recently completed a software development bootcamp  with Purple Beard.
-        </p>
+        <article class="about-section">
+            <p class="about-text">
+                A Cambridge-based front-end developer with experience as a Cybersecurity technical support engineer. I have experience with HTML, CSS, Javascript, Python and Linux. With a passion for technology, I have recently completed a software development bootcamp  with Purple Beard.
+            </p>
+            <picture>
+                <source media="(min-width:40em)" srcset="img/bob.jpg"/>
+                
+        </article>
     </section>
     <!--About end-->
 
@@ -79,9 +84,9 @@
 
             <section class="contact-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eligendi vero culpa, totam consequuntur laborum praesentium dolorum at incidunt suscipit quo nisi doloribus ex qui quis optio, illo, exercitationem a!
-                <article>
-                    <p class="linkedin"><i class="fa-brands fa-linkedin"></i>https://www.linkedin.com/in/steven-wright1/</p>
-                    <p class="github"><i class="fa-brands fa-github"></i>https://github.com/Steven-Wright1</p>
+                <article class="social-media">
+                    <p class="linkedin"><i class="fa-brands fa-linkedin"></i>      https://www.linkedin.com/in/steven-wright1/</p>
+                    <p class="github"><i class="fa-brands fa-github"></i>      https://github.com/Steven-Wright1</p>
                 </article>
             </section>
 
