adding new desktop layout

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -15,13 +15,21 @@
 
 
     <!--hero start-->
-    <section class="hero">
-        <section class="hero-text">
-           <h1 class="header">Steven Wright</h1>
-           <p class="header2">Front End Developer</p>
-           <button class="button">Contact</button>
+    <span class="desktop-background">
+        <section class="test">
+
         </section>
-    </section>
+        <section class="hero">
+            <section class="hero-text">
+            <h1 class="header">Steven Wright</h1>
+            <p class="header2">Front End Developer</p>
+            <button class="button">Contact</button>
+            </section>
+        </section>
+        <section class="test" id="invert">
+
+        </section>
+    </span>
     <!--hero end-->
 
     <!--About start-->
