committing finalised design - noticed issue with height responsivebess

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -41,7 +41,8 @@
             </p>
             <picture>
                 <source media="(min-width:40em)" srcset="img/bob.jpg"/>
-                
+                <img id="decoy" src="img/annie-spratt-MChSQHxGZrQ-unsplash.jpg" alt=""/>
+            </picture>
         </article>
     </section>
     <!--About end-->
