correcting sync errors introduced during submission

--- a/Battleships/battleships/index.html
+++ b/Battleships/battleships/index.html
@@ -76,6 +76,6 @@
         <div class="grid-item item64">64</div>
       </div> 
 
-    <script src='logic.js'></script>
+    <script src='battleships.js'></script>
 </body>
 </html>
